[package]
name = "fastrace-google-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3"
fastrace = "0.7.8"
google-cloud-gax = "0.23.0"
google-cloud-rpc = "0.4.0"
google-cloud-trace-v2 = "0.4.0"
google-cloud-wkt = "0.5.0"
log = "0.4"
opentelemetry-semantic-conventions = { version = "0.29", features = ["semconv_experimental"] }
tokio = { version = "1", default-features = false, features = ["rt"] }
