[package]
name = "fastrace-google-cloud"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
bon = "3"
fastrace = "0.7"
google-cloud-gax = "0.23"
google-cloud-rpc = "0.4"
google-cloud-trace-v2 = "0.4"
google-cloud-wkt = "0.5"
log = "0.4"
opentelemetry-semantic-conventions = { version = "0.30", features = ["semconv_experimental"] }
tokio = { version = "1", default-features = false, features = ["rt"] }
