[package]
name = "fastrace-google-cloud"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
bon = "3"
fastrace = "0.7"
google-cloud-gax = "1"
google-cloud-rpc = "1"
google-cloud-trace-v2 = "1"
google-cloud-wkt = "1"
log = "0.4"
opentelemetry-semantic-conventions = { version = "0.30", features = ["semconv_experimental"] }
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
fastrace = { version = "0.7", features = ["enable"]}
